--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,7 +16,7 @@
   width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
-  width: 100%;
+  /*width: 100%;*/
   height: 100vh;
   color: #777D74;
   background: #fafafb;
@@ -27,13 +27,12 @@
   width: 1200px;
   height: 100vh;
   margin: 0 auto;
-  padding: 0 20px;
   margin-top: 20px;
 }
 
 .content {
   /*grid-area: content;*/
   width: 70%;
-  margin: 0 auto;
+  margin-left: auto;
 }
 
