feat: add correction

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -57,6 +57,7 @@
   line-height: 20px;
   padding: 0.5rem;
   padding-left: 2rem;
+  font-weight: bold;
   border-radius: 5px;
   outline: none;
   border: none;
