--- a/src/components/common/Loader/Loader.css
+++ b/src/components/common/Loader/Loader.css
@@ -1,6 +1,8 @@
 .lds-ellipsis {
   display: inline-block;
-  position: relative;
+  position: absolute;
+  top: 0%;
+  left: 45%;
   width: 80px;
   height: 80px;
 }
