feat: add to 68-les

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -131,6 +131,10 @@
   background-color: #007bff;
 }
 
+.follow_btn:disabled{
+  opacity: 0.3;
+}
+
 .box_bg {
   position: relative;
   opacity: 0.7;
