feat: add redux form

--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -17,21 +17,21 @@
   margin: 0 auto;
 }
 
-.textarea {
-  font-family: Montserrat, sans-serif;
-  border: none;
-  outline: none;
-  height: 85px;
-  line-height: 25px;
-  background: transparent;
-  font-size: 14px;
-  color: #a09e9e;
-  resize: none;
-  outline: none;
-  border-radius: 5px;
-  overflow-y: auto;
-  width: 70%;
-}
+/*.textarea {*/
+/*  font-family: Montserrat, sans-serif;*/
+/*  border: none;*/
+/*  outline: none;*/
+/*  height: 85px;*/
+/*  line-height: 25px;*/
+/*  background: transparent;*/
+/*  font-size: 14px;*/
+/*  color: #a09e9e;*/
+/*  resize: none;*/
+/*  outline: none;*/
+/*  border-radius: 5px;*/
+/*  overflow-y: auto;*/
+/*  width: 70%;*/
+/*}*/
 
 .title {
   padding: 0 20px;
