feat: add styles

--- a/src/components/Profile/ProfileStatus/ProfileStatus.module.css
+++ b/src/components/Profile/ProfileStatus/ProfileStatus.module.css
@@ -1,12 +1,11 @@
 .box {
-	margin-top: 20px;
+	cursor: pointer;
 }
 
 
 .status {
-	width: 100px;
+	min-width: 100px;
 	height: 30px;
 	margin: 0;
-	border: 1px solid #50b5ff;
 	cursor: pointer;
 }
