--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -41,10 +41,11 @@
 }
 
 .info {
-  position: absolute;
-  bottom: 10px;
+  /*position: absolute;*/
+  /*bottom: 10px;*/
   text-align: center;
   width: 100%;
+  margin-top: -90px;
 }
 
 .social {
@@ -62,6 +63,10 @@
   padding-top: 5px;
 }
 
-.status:first-letter  {
+.status:first-letter {
   text-transform: capitalize;
+}
+
+.box {
+  display: flex;
 }
