--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,18 +1,68 @@
 .selected {
-	display: inline-block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	cursor: pointer;
-	font-size: larger;
-	color: crimson;
-	margin-left: 5px;
+	font-size: 20px;
+	color: white;
+	background-color: #50b5ff;
+	border-radius: 50%;
+	width: 15px;
+	height: 15px;
+	padding: 10px;
+	margin: 0;
+}
+
+.selected.pagination_wrap {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 90px;
 }
 
 .pagination_wrap {
 	display: flex;
-	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	min-height: 90px;
 }
 
 .page {
+	margin: 0;
+	font-size: 20px;
 	display: flex;
 	cursor: pointer;
-	padding-left: 4px;
+	padding: 10px;
+	width: 15px;
+	height: 32px;
+}
+
+
+.prevBtn, .nextBtn {
+	background: #50b5ff;
+	border: none;
+	font-size: 18px;
+	color: #fff;
+	outline: none;
+	padding: 10px 15px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.nextBtn {
+	margin-left: 15px;
+}
+
+.prevBtn {
+	margin-right: 10px;
+}
+
+.prevBtn:hover,
+.prevBtn:active {
+	background-color: #007bff;
+}
+
+.nextBtn:hover,
+.nextBtn:active {
+	background-color: #007bff;
 }
